--- a/resources/assets/sass/elements/_article.scss
+++ b/resources/assets/sass/elements/_article.scss
@@ -5,95 +5,6 @@
 	position: relative;
 	margin-left: 0;
 
-	ul {
-		font-size: 14px;
-	}
-
-	.content-list ul li {
-		margin: 8px;
-		line-height: 1.65;
-	}
-
-	p {
-		font-size: 14.5px;
-		line-height: 1.70;
-	}
-
-	h1 {
-		margin-top: 0;
-		margin-bottom: rem-calc(30px);
-	}
-
-	h1 + ul {
-		margin: 0;
-		padding: 0;
-		list-style: none;
-		font-size: 16px;
-		font-weight: bold;
-		line-height: 1.5;
-		padding-bottom: 50px;
-		border-bottom: 1px solid $color-faint;
-		-webkit-font-smoothing: antialiased;
-		
-		li {
-			&:before {
-				content: "# ";
-				margin-right: .25em;
-				color: $color-primary;
-				opacity: .3;
-			}
-			a {
-				text-decoration: none;
-			}
-		}
-	}
-
-	li > ul {
-		font-size: 15px;
-		font-weight: 400;
-		list-style: none;
-	}
-
-	h2:first-of-type {
-		margin-top: 15px;
-	}
-
-	h2 {
-		font-size: 30px;
-		font-weight: 400;
-		margin-top: 55px;
-		margin-bottom: 15px;
-		position: relative;
-
-		a,
-		a:hover {
-			color: inherit;
-			text-decoration: none;
-		}
-		a:before {
-			content: "#";
-			margin-left: -20px;
-			position: absolute;
-			font-size: 28px;
-			color: $color-primary;
-			opacity: .6;
-		}
-	}
-
-	h3 {
-		font-size: 24px;
-		font-weight: 400;
-		margin-top: 45px;
-		margin-bottom: 10px;
-	}
-
-	h4 {
-		font-size: 16px;
-		font-weight: 700;
-		margin-top: 35px;
-		margin-bottom: 10px;
-	}
-
 	a {
 		text-decoration: underline;
 
@@ -102,26 +13,11 @@
 		}
 	}
 
-	blockquote a:hover {
-		color: lighten($color-primary, 25%);
-	}
-
-	table {
-		border-collapse: collapse;
-		width: 100%;
-		font-size: 14px;
-		th,
-		td {
-			border: 1px solid $color-lighter-gray;
-			padding: 10px;
-			text-align: left;
-		}
-		th {
-			font-size: 16px;
-		}
-	}
-
 	blockquote {
+		a:hover {
+			color: lighten($color-primary, 25%);
+		}
+
 		&.has-icon {
 			position: relative;
 		
@@ -147,11 +43,118 @@
 			}
 		}
 	}
+
+	h1 {
+		margin-top: 0;
+		margin-bottom: rem-calc(30px);
+
+		& + ul {
+			margin: 0;
+			padding: 0;
+			list-style: none;
+			font-size: 16px;
+			font-weight: bold;
+			line-height: 1.5;
+			padding-bottom: 50px;
+			border-bottom: 1px solid $color-faint;
+			-webkit-font-smoothing: antialiased;
+			
+			li {
+				&:before {
+					content: "# ";
+					margin-right: .25em;
+					color: $color-primary;
+					opacity: .3;
+				}
+				a {
+					text-decoration: none;
+				}
+			}
+		}
+	}
+
+	h2 {
+		font-size: 30px;
+		font-weight: 400;
+		margin-top: 55px;
+		margin-bottom: 15px;
+		position: relative;
+
+		a,
+		a:hover {
+			color: inherit;
+			text-decoration: none;
+		}
+		a:before {
+			content: "#";
+			margin-left: -20px;
+			position: absolute;
+			font-size: 28px;
+			color: $color-primary;
+			opacity: .6;
+		}
+
+		&:first-of-type {
+			margin-top: 15px;
+		}
+	}
+
+	h3 {
+		font-size: 24px;
+		font-weight: 400;
+		margin-top: 45px;
+		margin-bottom: 10px;
+	}
+
+	h4 {
+		font-size: 16px;
+		font-weight: 700;
+		margin-top: 35px;
+		margin-bottom: 10px;
+	}
+
+	img {
+		max-width: 100%;
+	}
+
+	ul {
+		font-size: 14px;
+	}
+
+	li > ul {
+		font-size: 15px;
+		font-weight: 400;
+		list-style: none;
+	}
+
+	p {
+		font-size: 14.5px;
+		line-height: 1.70;
+	}
+
+	table {
+		border-collapse: collapse;
+		width: 100%;
+		font-size: 14px;
+		th,
+		td {
+			border: 1px solid $color-lighter-gray;
+			padding: 10px;
+			text-align: left;
+		}
+		th {
+			font-size: 16px;
+		}
+	}
 	
+	.content-list ul li {
+		margin: 8px;
+		line-height: 1.65;
+	}
+
 	.svg svg {
 		width: 24px;
 	}
-	
 
 	@media (min-width: $bp-medium + 1) {
 		margin-left: rem-calc(200px);
