--- a/resources/assets/sass/elements/_article.scss
+++ b/resources/assets/sass/elements/_article.scss
@@ -1,6 +1,6 @@
-// DocWeaver - article
+// Docweaver - article
 
-#doc-weaver-article, .docs article {
+#docweaver-article, .docs article {
 	padding: rem-calc(15px 30px 30px);
 	position: relative;
 	margin-left: 0;
