--- a/resources/assets/sass/elements/_sidebar.scss
+++ b/resources/assets/sass/elements/_sidebar.scss
@@ -1,6 +1,6 @@
-// DocWeaver - Sidebar
+// Docweaver - Sidebar
 
-#doc-weaver-sidebar, .docs .sidebar {
+#docweaver-sidebar, .docs .sidebar {
 	display: block;
 	height: 100%;
 	left: -2px;
