updates to product line accent

--- a/resources/assets/sass/elements/_main.scss
+++ b/resources/assets/sass/elements/_main.scss
@@ -92,6 +92,10 @@ a {
 
     &#docweaver-product-line {
         display: block;
+
+        &:not(.show):not(.true) {
+            display: none;
+        }
     }
 }
 
