--- a/resources/assets/sass/elements/_main.scss
+++ b/resources/assets/sass/elements/_main.scss
@@ -93,8 +93,8 @@ a {
     &#docweaver-product-line {
         display: block;
 
-        &:not(.show):not(.true) {
-            display: none;
+        &.no-line, &.invisible {
+            background: transparent;
         }
     }
 }
