--- a/resources/sass/elements/_sidebar.scss
+++ b/resources/sass/elements/_sidebar.scss
@@ -1,14 +1,15 @@
 // Docweaver - Sidebar
 
-#docweaver-sidebar, .docs .sidebar {
+.docweaver-sidebar {
 	display: block;
 	height: 100%;
 	left: -2px;
 	top: 0;
 	width: 2px;
 	position: fixed;
-	
-	> .sidebar-popper, > .sidebar-toggle {
+    z-index: 1;
+
+	> .docweaver-sidebar-popper {
 		background: rgba(#fff, 0.8);
 		cursor: pointer;
 		position: absolute;
@@ -42,23 +43,23 @@
 		@include opacity(0);
 
 		@include transition(
-			height 200ms, 
+			height 200ms,
 			padding 300ms,
 			width 300ms
 		);
 
 		a {
 			line-height: 1.5;
-	
+
 			&:hover {
 				color: $color-darker-primary;
 			}
-	
-			&#doc-expand {
+
+			&.doc-expand {
 				color: transparent;
 				display: block;
 				position: relative;
-	
+
 				&:after {
 					content: "";
 					position: absolute;
@@ -72,7 +73,7 @@
 					border-bottom: 6px solid transparent;
 					@include transition(all 180ms);
 				}
-	
+
 				&.is-active, &.is-expanded {
 					&:after {
 						border-left-color: $color-primary;
@@ -92,17 +93,17 @@
 			cursor: pointer;
 			transition: color 0.1s linear;
 			border-bottom: 1px dashed rgba(0, 0, 0, 0.1);
-	
+
 			&:focus {
 				outline: 0;
 			}
-	
+
 			&:hover,
 			{
 				color: $color-darker-primary;
 				// border-color: currentColor;
 			}
-	
+
 			&:after {
 				content: "";
 				position: absolute;
@@ -116,37 +117,37 @@
 				border-bottom: 4px solid transparent;
 				@include transition(all 180ms);
 			}
-	
+
 			& + ul {
 				display: none;
 			}
-	
+
 			&.is-active, &.is-expanded {
 				// color: $color-darker-primary;
 				// border-bottom-style: solid;
-	
+
 				&:after {
 					transform: rotate(90deg);
 				}
-	
+
 				& + ul {
 					display: block;
 				}
 			}
 		}
-	
+
 		> ul {
 			list-style: none;
 			padding: 0;
 			margin: 0;
-	
+
 			> li {
 				font-size: 14px;
 				font-weight: 400;
 				padding: 0;
 				margin: 0;
 				line-height: 25px;
-	
+
 				> ul {
 					list-style: none;
 					margin: 0.5rem 0 0;
@@ -155,7 +156,7 @@
 					padding-left: 0.75rem;
 				}
 			}
-	
+
 			li {
 				&.is-active, &.active {
 					font-weight: bold;
@@ -163,7 +164,7 @@
 			}
 		}
 	}
-	
+
 	&.popped {
 		background: $color-shadow;
 		position: fixed;
@@ -191,11 +192,11 @@
 
 			span {
 				@include opacity(0);
-				
+
 				&:first-child, &:last-child {
 					width: rem-calc(20px);
 				}
-				
+
 				&:first-child {
 					@include opacity(1);
 					@include transform(rotate(45deg));
@@ -223,7 +224,7 @@
 			}
 		}
 	}
-	
+
 	// override "popped" state for medium and larger screens
 	&.sidebar {
 		@media (min-width: $bp-medium + 1) {
@@ -236,11 +237,11 @@
 			position: relative;
 			width: 200px;
 			@include zero-corners;
-			
+
 			> .sidebar-popper, > .sidebar-toggle {
 				display: none;
 			}
-			
+
 			> .sidebar-content {
 				background: transparent;
 				@include border-radius(0);
