--- a/resources/sass/elements/_main.scss
+++ b/resources/sass/elements/_main.scss
@@ -9,34 +9,32 @@ a {
 // Product Bar
 .docweaver-product-bar, .docweaver-product-line {
     background-color: lighten($color-primary, 2%);
-    margin-bottom: 20px;
     min-height: 2px;
+    @apply text-white px-4 py-2 flex items-center mb-5;
 
     .docweaver-docs-home-link {
-        display: inline-block;
-        padding-right: 0.68em;
-        position: relative;
+        @apply relative inline-block pr-3;
         @include transition(margin 1800ms);
 
         > span {
-			@include backface-visibility(hidden);
-			@include transition(all 300ms);
-			background: #fff;
-			display: block;
-			height: 2px;
+            @include backface-visibility(hidden);
+            @include transition(all 300ms);
+            background: #fff;
+            display: block;
+            height: 2px;
             margin: 0 0 5px auto;
             position: relative;
             @include opacity(0.68);
-			width: rem-calc(15px);
-			@include transition(all 800ms);
+            width: rem-calc(15px);
+            @include transition(all 800ms);
 
-			&:first-child, &:last-child {
-				width: rem-calc(12px);
-			}
+            &:first-child, &:last-child {
+                width: rem-calc(12px);
+            }
 
-			&:last-child {
-				margin-bottom: 0;
-			}
+            &:last-child {
+                margin-bottom: 0;
+            }
         }
 
         &:hover {
@@ -65,33 +63,47 @@ a {
         }
     }
 
-    .docweaver-navbar-collapse-replacement {
-        @include display-flex;
-        margin-left: auto;
+    .docweaver-current-product-name {
+        @apply flex-auto no-underline;
+        color: inherit;
     }
 
-    .navbar-brand {
-        color: #fff;
+    .docweaver-current-product-versions {
     }
 
-    .version-switcher {
-        .current-version {
-            @include opacity(1);
+    .docweaver-version-selector {
+        @apply inline-block appearance-none border px-2 py-1 pr-8 rounded-sm leading-tight text-gray-900 cursor-pointer;
+        background-color: rgba(#fff, .85);
+        border-color: rgba(#fff, .9);
+        @include transition(all 200ms);
+
+        &:hover {
+            border-color: #fff;
         }
 
-        .version-menu {
-            position: absolute;
-            right: 0;
-            left: auto;
+        &:focus {
+            @apply outline-none;
         }
 
-        .version-menu-btn {
-            cursor: pointer;
+        &-label {
+            @apply text-sm relative;
+
+            > span {
+                display: none;
+            }
+        }
+
+        &-pointer {
+            @apply pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700;
+
+            > svg {
+                @apply fill-current h-4 w-4;
+            }
         }
     }
 
     &.docweaver-product-line {
-        display: block;
+        @apply block;
 
         &.no-line, &.invisible {
             background: transparent;
@@ -122,11 +134,11 @@ a {
         .product {
             background: rgba(#fff, 0.7);
             border: 1px solid rgba($color-lighter-gray, 0.6);
-            @include border-radius(3px);
             @include box-shadow(0 0 5px 0 rgba(#111, 0.05));
             margin: 1rem 0;
             overflow: hidden;
             @include transition(all 200ms);
+            @apply rounded-sm;
 
             * {
                 @include transition(all 200ms);
@@ -245,7 +257,7 @@ a {
     text-align: center;
 
     .by-line {
-       color: inherit;
+        color: inherit;
     }
 
     a {
